Bitacora: fixed overflow issues

--- a/src/Bitacora/bitacora.css
+++ b/src/Bitacora/bitacora.css
@@ -9,28 +9,23 @@
 	background-attachment: scroll;
 	background-position: 0% 83%;
 }
-.container {
-	max-width: 1200px;
+.containerBitacora {
 	margin: 1rem;
-	padding: 1rem;
-	padding-bottom: 0;
+	padding: 1rem .5rem;
 }
-.section {
+.sectionBitacora {
 	background: #fff;
 	color: #111;
-	padding: 1rem 0.3rem;
-	padding-bottom: 0;
 }
 .bitacoraStyle {
     overflow: hidden;
 	border-radius: 10px 10px 10px 10px;
 	background-color: rgba(200, 200, 200, 0.637);
-	padding: 1.25rem;
 }
 
 #sectionBitacora > article {
 	margin: 0.3rem;
-	padding: 2rem;
+	padding: 1rem;
 	border-radius: 10px 10px 10px 10px;
 	background-color: rgba(233, 233, 233, 0.589);
 }
